# pyros-cli

./: .envtemplate  .gitignore  .sesskey  PROMPT_LOGIC.md  README.md  VIBE_CODE.md  pyproject.toml
.project/: review.md
.project/specification/: 1-overview.md  10-api-integration.md  2-installation.md  3-cli-interface.md  4-workflow-integration.md  5-prompt-system.md  6-configuration.md  7-image-generation.md  8-commands-variables.md  9-architecture.md
.project/todos/: critical_fixes.md  recommendations.md  test_plan.md
pyros-app/: .gitignore  .sesskey  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
pyros-app/backend/: server.py
pyros-app/src/: App.svelte  app.css  main.ts
pyros-app/src-tauri/: Cargo.toml  tauri.conf.json
pyros-app/src-tauri/capabilities/: default.json
pyros-app/src-tauri/src/: main.rs
src/pyros_cli/: __init__.py  main.py
src/pyros_cli/agents/: enhance_agent.py  flock_handler.py  orchestrator_agent.py  prompt_var_generator_agent.py  tools.py
src/pyros_cli/local/: __init__.py  cli.py  image_generator.py  llm_provider.py
src/pyros_cli/models/: comfyui_workflow.py  flock_artifacts.py  prompt_vars.py  user_messages.py
src/pyros_cli/services/: config.py  gallery.py  preview.py  prompt_evaluate.py  prompt_substitution.py
src/pyros_cli/services/commands/: __init__.py  base_command.py  cntrl_command.py  configure_ai_command.py  gallery_command.py  help_command.py  history_command.py  list_vars_command.py
src/pyros_cli/tests/: __init__.py  test_flock_agents.py  test_local_mode.py  test_prompt_substitution.py
src/pyros_cli/utils/: __init__.py  cli_helper.py  comfy_utils.py  exceptions.py
workflow/: 00_zimage.json  ComfyUI_00696_.json
