[project]
name = "pyros-cli"
version = "0.2.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "art>=6.5",
    "flock-core>=0.5.30",
    "loguru>=0.7.3",
    "pillow>=10.4.0",
    "pydantic>=2.11.3",
    "python-dotenv>=1.1.0",
    "python-fasthtml>=0.12.14",
    "questionary>=2.1.0",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "term-image>=0.7.2",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
local = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "diffusers>=0.32.0",
    "huggingface-hub>=0.23.0",
    "sentencepiece>=0.2.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
pyros-cli = "pyros_cli:main"
pyros-local = "pyros_cli.local:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.11.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.uv.sources]
diffusers = { git = "https://github.com/huggingface/diffusers" }
