[package]
name = "pyros-app"
version = "0.1.0"
description = "Pyros - AI Image Generator"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full", "process"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

